fix scrolling when switching collection volume + simplify reading view on mobile (buda-base/public-digital-library#472)

--- a/css/less/main-menu.less
+++ b/css/less/main-menu.less
@@ -148,6 +148,14 @@
 
 .inApp {   
 
+  .nav-bar-top #breadcrumbs { 
+    a#collec:not(.active) { display:none !important; 
+      & + a { padding-left:0; 
+        &::before { content:none; }
+      }
+    }
+  }
+
   .mirador-container .mirador-viewer .scroll-view { height:100%;}
 
   .mirador-main-menu-bar,
